syntax = "proto3";

package tari.base_node;
import "mmr_state_request.proto";

// Request type for a received BaseNodeService request.
message BaseNodeServiceRequest {
    uint64 request_key = 1;
    oneof request {
        // Indicates a GetChainMetadata request. The value of the bool should be ignored.
        bool get_chain_metadata = 2;
        // Indicates a FetchKernels request.
        HashOutputs fetch_kernels = 3;
        // Indicates a FetchHeaders request.
        BlockHeights fetch_headers = 4;
        // Indicates a FetchUtxos request.
        HashOutputs fetch_utxos = 5;
        // Indicates a FetchBlocks request.
        BlockHeights fetch_blocks = 6;
        // Indicates a FetchMmrState request.
        MmrStateRequest fetch_mmr_state = 7;
        // Indicates a GetNewBlock request.
        bool get_new_block = 8;
    }
}

message BlockHeights {
    repeated uint64 heights = 1;
}

message HashOutputs {
    repeated bytes outputs = 1;
}
