syntax = "proto3";

import "transaction.proto";
import "block.proto";
import "chain_metadata.proto";
import "mutable_mmr_state.proto";

package tari.base_node;

// Response type for a received BaseNodeService requests
message BaseNodeServiceResponse {
    uint64 request_key = 1;
    oneof response {
        ChainMetadata chain_metadata = 2;
        TransactionKernels transaction_kernels = 3;
        BlockHeaders block_headers = 4;
        TransactionOutputs transaction_outputs = 5;
        HistoricalBlocks historical_blocks = 6;
        MutableMmrState mmr_state = 7;
        tari.core.Block new_block = 8;
    }
}

message BlockHeaders {
    repeated tari.core.BlockHeader headers = 1;
}

message TransactionKernels {
    repeated tari.types.TransactionKernel kernels = 1;
}

message TransactionOutputs {
    repeated tari.types.TransactionOutput outputs = 1;
}

message HistoricalBlocks {
    repeated tari.core.HistoricalBlock blocks = 1;
}
